ST-1651: Fix format of document name in document list - remove url from document name - fix for hearing rec files which were not being added as the code wasn't refactored as part of hearing list release on 31/10 - update tests - tidy up state class and associated tests