@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.util.CollectionUtils;
 import uk.gov.hmcts.ccd.sdk.type.DynamicList;
 import uk.gov.hmcts.ccd.sdk.type.DynamicListElement;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -15,9 +14,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 
+import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static uk.gov.hmcts.sptribs.common.config.ControllerConstants.ACCEPT_VALUE;
 import static uk.gov.hmcts.sptribs.constants.CommonConstants.ST_CIC_JURISDICTION;
@@ -62,7 +61,7 @@ public class JudicialService {
                         JudicialUsersRequest.builder()
                             .ccdServiceName(ST_CIC_JURISDICTION)
                             .build());
-            if (CollectionUtils.isEmpty(list)) {
+            if (isEmpty(list)) {
                 return new ArrayList<>();
             }
             return list;
@@ -75,14 +74,14 @@ public class JudicialService {
 
     private DynamicList populateUsersDynamicList(List<UserProfileRefreshResponse> judges) {
         List<String> usersList = Objects.nonNull(judges)
-            ? judges.stream().map(UserProfileRefreshResponse::getFullName).collect(Collectors.toList())
+            ? judges.stream().map(UserProfileRefreshResponse::getFullName).toList()
             : new ArrayList<>();
 
         List<DynamicListElement> usersDynamicList = usersList
             .stream()
             .sorted()
             .map(user -> DynamicListElement.builder().label(user).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
 
         return DynamicList
             .builder()
